changes before the talk

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -40,7 +40,7 @@
                         <h2>Who Am I?</h2>
 
                         <ul>
-                            <li class="fragment roll-in ">Java Developer since 1996</li>
+                            <li class="fragment roll-in">Java Developer since 1996</li>
                             <li class="fragment roll-in">Currently Sr. Software Engineer at Squarespace.com
                             <li class="fragment roll-in">Former member of the GlassFish/Grizzly team
                                 <ul>
@@ -56,7 +56,6 @@
                         <aside class="notes">
                             <ul>
                                 <li>JSP 0.92ish</li>
-
                             </ul>
                         </aside>
                     </section>
@@ -66,27 +65,27 @@
                     <section>
                         <h2>What is Mongo?</h2>
                         <ul>
-                            <li class="fragment roll-in ">Name derives from "humongous" which mean big (for you
+                            <li class="fragment roll-in">Name derives from "humongous" which mean big (for you
                                 non-idiomatic English speakers)
-                            <li class="fragment roll-in ">It is a scalable, high-performance, open source NoSQL database
-                            <li class="fragment roll-in ">Written in C++</li>
-                            <li class="fragment roll-in ">Document oriented</li>
-                            <li class="fragment roll-in ">Fully indexable</li>
-                            <li class="fragment roll-in ">Replication and HA</li>
-                            <li class="fragment roll-in ">Map Reduce</li>
-                            <li class="fragment roll-in ">GridFS</li>
+                            <li class="fragment roll-in">It is a scalable, high-performance, open source NoSQL database
+                            <li class="fragment roll-in">Written in C++</li>
+                            <li class="fragment roll-in">Document oriented</li>
+                            <li class="fragment roll-in">Fully indexable</li>
+                            <li class="fragment roll-in">Replication and HA</li>
+                            <li class="fragment roll-in">Map Reduce</li>
+                            <li class="fragment roll-in">GridFS</li>
                         </ul>
                     </section>
                     <section>
                         <h2>Document Oriented</h2>
                         <ul>
-                            <li class="fragment roll-in ">In JPA, one object is typically mapped across multiple cells
+                            <li class="fragment roll-in">In JPA, one object is typically mapped across multiple cells
                                 in one row of a table
-                                <ul class="fragment roll-in ">
+                                <ul class="fragment roll-in">
                                     <li>sometimes multiple objects with embedded entities</li>
                                 </ul>
                             </li>
-                            <li class="fragment roll-in ">Documents stored in json-style documents
+                            <li class="fragment roll-in">Documents stored in json-style documents
                                     <ul >
                                     <li class="fragment roll-in">actually BSON (<a href="http://bsonspec.org">http://bsonspec.org</a>) </li>
                                     <li class="fragment roll-in">BSON adds some "extra" information to documents, like length prefixes, that
@@ -128,6 +127,12 @@
                         </ul>
                     </section>
                 </section>
+
+                <section>
+                    <h1>TO THE SHELL!</h1>
+                </section>
+
+                <!--scripted-->
 
                 <section>
                     <h2>Links</h2>
