--- a/presentation/index.html
+++ b/presentation/index.html
@@ -135,6 +135,10 @@
                 <!--scripted-->
 
                 <section>
+                    <h1>TO THE CODE!</h1>
+                </section>
+
+                <section>
                     <h2>Links</h2>
                     <ul>
                         <li><a href="http://www.mongodb.org/">http://www.mongodb.org/</a> Mongo Homepage</li>
