link to the presentation

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -141,6 +141,7 @@
                 <section>
                     <h2>Links</h2>
                     <ul>
+                        <li><a href="https://github.com/evanchooly/mongo4jpadevs">Presentation</a></li>
                         <li><a href="http://www.mongodb.org/">http://www.mongodb.org/</a> Mongo Homepage</li>
                         <li><a href="http://code.google.com/p/morphia/">http://code.google.com/p/morphia/</a> Morphia
                             homepage
