remove jfokus references

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -31,7 +31,7 @@
                         <br>for JPA Developers</h1>
 
                     <h3>Justin Lee</h3>
-                    <h4>Senior Software Developer <br>@ squarespace.com</h4>
+                    <h4>Member of Technical Staff<br>@ 10gen.com</h4>
                     http://antwerkz.com
                     @evanchooly
                 </section>
@@ -41,7 +41,7 @@
 
                         <ul>
                             <li class="fragment roll-in">Java Developer since 1996</li>
-                            <li class="fragment roll-in">Currently Sr. Software Engineer at Squarespace.com
+                            <li class="fragment roll-in">Currently Member of Technical Staff @ 10Gen
                             <li class="fragment roll-in">Former member of the GlassFish/Grizzly team
                                 <ul>
                                     <li class="fragment roll-in">Implemented the WebSocket support for GlassFish 3.1.x
@@ -102,7 +102,7 @@
                             <code>
 {
     "_id" : ObjectId("50fdb55a18c650918ee414be"),
-    "className" : "com.antwerkz.jfokus.mongo.model.User",
+    "className" : "com.antwerkz.mongo.model.User",
     "firstName" : "Jules",
     "lastName" : "Winnfield",
     "email" : "jules@hotmail.com",
@@ -143,22 +143,16 @@
                     <ul>
                         <li><a href="https://github.com/evanchooly/mongo4jpadevs">https://github.com/evanchooly/mongo4jpadevs</a></li>
                         <li><a href="http://www.mongodb.org/">http://www.mongodb.org/</a> Mongo Homepage</li>
-                        <li><a href="http://code.google.com/p/morphia/">http://code.google.com/p/morphia/</a> Morphia
-                            homepage
-                        </li>
-                        <li><a href="https://github.com/jmkgreen/morphia">https://github.com/jmkgreen/morphia</a> Morphia
-                            fork
+                        <li><a href="https://github.com/mongodb/morphia">https://github.com/mongodb/morphia</a> Homepage
                         </li>
                         <li><a href="http://jongo.org">http://jongo.org</a> Jongo</li>
                         <li>Disclaimer: My Stuff</li>
                         <ul>
                             <li>
-                                <a href="https://github.com/evanchooly/critter">https://github.com/evanchooly/critter</a>
-                                critter
+                                <a href="https://github.com/evanchooly/critter">https://github.com/evanchooly/critter</a> critter
                             </li>
                             <li>
-                                <a href="https://github.com/evanchooly/ophelia">https://github.com/evanchooly/ophelia</a>
-                                Ophelia
+                                <a href="https://github.com/evanchooly/ophelia">https://github.com/evanchooly/ophelia</a> Ophelia
                             </li>
                         </ul>
                     </ul>
@@ -168,7 +162,7 @@
                         <br>for JPA Developers</h1>
 
                     <h3>Justin Lee</h3>
-                    <h4>Senior Software Developer <br>@ squarespace.com</h4>
+                    <h4>Member of Technical Staff<br>@ 10gen.com</h4>
                     http://antwerkz.com
                     @evanchooly
                 </section>
