--- a/presentation/scripted.html
+++ b/presentation/scripted.html
@@ -102,7 +102,7 @@ db.users.find().pretty()
 <code>
 {
 "_id" : ObjectId("50fdb55a18c650918ee414be"),
-"className" : "com.antwerkz.jfokus.mongo.model.User",
+"className" : "com.antwerkz.mongo.model.User",
 "firstName" : "Jules",
 "lastName" : "Winnfield",
 "email" : "jules@hotmail.com",
