new theme. new scripted version

--- a/presentation/scripted.html
+++ b/presentation/scripted.html
@@ -6,7 +6,7 @@
 <meta name="author" content="Justin lee">
 
 <link rel="stylesheet" href="css/reveal.css">
-<link rel="stylesheet" href="css/theme/sky.css" id="theme">
+<link rel="stylesheet" href="css/theme/moon.css" id="theme">
 
 <!-- For syntax highlighting -->
 <link rel="stylesheet" href="lib/css/zenburn.css">
@@ -31,7 +31,7 @@ list-style-image: none;
 <br>for JPA Developers</h1>
 
 <h3>Justin Lee</h3>
-<h4>Senior Software Developer <br>@ squarespace.com</h4>
+<h4>Member of Technical Staff<br>@ 10gen.com</h4>
 http://antwerkz.com
 @evanchooly
 </section>
@@ -41,7 +41,7 @@ http://antwerkz.com
 
 <ul>
 <li class="fragment roll-in">Java Developer since 1996</li>
-<li class="fragment roll-in">Currently Sr. Software Engineer at Squarespace.com
+<li class="fragment roll-in">Currently Member of Technical Staff @ 10Gen
 <li class="fragment roll-in">Former member of the GlassFish/Grizzly team
 <ul>
 <li class="fragment roll-in">Implemented the WebSocket support for GlassFish 3.1.x
@@ -65,8 +65,7 @@ and 3.2
 <section>
 <h2>What is Mongo?</h2>
 <ul>
-<li class="fragment roll-in">Name derives from "humongous" which mean big (for you
-non-idiomatic English speakers)
+<li class="fragment roll-in">Name derives from "humongous" which mean big
 <li class="fragment roll-in">It is a scalable, high-performance, open source NoSQL database
 <li class="fragment roll-in">Written in C++</li>
 <li class="fragment roll-in">Document oriented</li>
@@ -169,22 +168,16 @@ db.users.find().pretty()
 <ul>
 <li><a href="https://github.com/evanchooly/mongo4jpadevs">https://github.com/evanchooly/mongo4jpadevs</a></li>
 <li><a href="http://www.mongodb.org/">http://www.mongodb.org/</a> Mongo Homepage</li>
-<li><a href="http://code.google.com/p/morphia/">http://code.google.com/p/morphia/</a> Morphia
-homepage
-</li>
-<li><a href="https://github.com/jmkgreen/morphia">https://github.com/jmkgreen/morphia</a> Morphia
-fork
+<li><a href="https://github.com/mongodb/morphia">https://github.com/mongodb/morphia</a> Homepage
 </li>
 <li><a href="http://jongo.org">http://jongo.org</a> Jongo</li>
 <li>Disclaimer: My Stuff</li>
 <ul>
 <li>
-<a href="https://github.com/evanchooly/critter">https://github.com/evanchooly/critter</a>
-critter
+<a href="https://github.com/evanchooly/critter">https://github.com/evanchooly/critter</a> critter
 </li>
 <li>
-<a href="https://github.com/evanchooly/ophelia">https://github.com/evanchooly/ophelia</a>
-Ophelia
+<a href="https://github.com/evanchooly/ophelia">https://github.com/evanchooly/ophelia</a> Ophelia
 </li>
 </ul>
 </ul>
@@ -194,7 +187,7 @@ Ophelia
 <br>for JPA Developers</h1>
 
 <h3>Justin Lee</h3>
-<h4>Senior Software Developer <br>@ squarespace.com</h4>
+<h4>Member of Technical Staff<br>@ 10gen.com</h4>
 http://antwerkz.com
 @evanchooly
 </section>
@@ -242,3 +235,4 @@ return !!document.body.classList;
 </script>
 
 </body>
+</html>
