new theme. new scripted version

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -6,7 +6,7 @@
         <meta name="author" content="Justin lee">
 
         <link rel="stylesheet" href="css/reveal.css">
-        <link rel="stylesheet" href="css/theme/sky.css" id="theme">
+        <link rel="stylesheet" href="css/theme/moon.css" id="theme">
 
         <!-- For syntax highlighting -->
         <link rel="stylesheet" href="lib/css/zenburn.css">
@@ -65,8 +65,7 @@
                     <section>
                         <h2>What is Mongo?</h2>
                         <ul>
-                            <li class="fragment roll-in">Name derives from "humongous" which mean big (for you
-                                non-idiomatic English speakers)
+                            <li class="fragment roll-in">Name derives from "humongous" which mean big
                             <li class="fragment roll-in">It is a scalable, high-performance, open source NoSQL database
                             <li class="fragment roll-in">Written in C++</li>
                             <li class="fragment roll-in">Document oriented</li>
