new slide/image

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -44,6 +44,7 @@
                             <li class="fragment roll-in">Currently Member of Technical Staff @ MongoDB
                             <li class="fragment roll-in">Java Driver, Morphia
                             <li class="fragment roll-in">Former member of the GlassFish/Grizzly team
+                            <li class="fragment roll-in">Websocket implementor and JSR 356 EG member
                             <li class="fragment roll-in">Worked with EE since 1998 <em class="fragment fade-in small">ish</em></li>
                             <ul class="fragment roll-in">
                                 <li class="fragment shrink fade-out">We built our own ORM
@@ -71,7 +72,7 @@
                     </ul>
                 </section>
                 <section>
-                    <h2>Document Oriented</h2>
+                <h2>Document Oriented</h2>
                     <ul>
                         <li class="fragment roll-in">In JPA, one object is typically mapped across multiple cells
                             in one row of a table
@@ -120,10 +121,10 @@
                         <li>sharding</li>
                     </ul>
                 </section>
-
                 <section>
-                    <h1>TO THE SHELL!</h1>
+                    <img width="40%" src="images/GrandTheftMongoD.jpg"/>
                 </section>
+
                 <section>
                     <h1>Queries</h1>
                     <ul>
@@ -149,6 +150,10 @@
 
                 <section>
                     <h1>TO THE CODE!</h1>
+                </section>
+
+                <section>
+                    <h1>TO THE SHELL!</h1>
                 </section>
 
                 <section>
