--- a/presentation/index.html
+++ b/presentation/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/html">
     <head>
-        <title>Mongo for JPA Developers</title>
+        <title>Mongo for Java Developers</title>
 
         <meta name="author" content="Justin lee">
 
@@ -28,7 +28,7 @@
             <div class="slides">
                 <section>
                     <h1>Mongo
-                        <br>for JPA Developers</h1>
+                        <br>for Java Developers</h1>
 
                     <h3>Justin Lee</h3>
                     <h4>Member of Technical Staff<br>@ MongoDB.com</h4>
@@ -74,7 +74,7 @@
                 <section>
                 <h2>Document Oriented</h2>
                     <ul>
-                        <li class="fragment roll-in">In JPA, one object is typically mapped across multiple cells
+                        <li class="fragment roll-in">In an RDBMS, one entity is typically mapped across multiple cells
                             in one row of a table
                             <ul class="fragment roll-in">
                                 <li>sometimes multiple objects with embedded entities</li>
@@ -121,9 +121,6 @@
                         <li>sharding</li>
                     </ul>
                 </section>
-                <section>
-                    <img width="40%" src="images/GrandTheftMongoD.jpg"/>
-                </section>
 
                 <section>
                     <h1>Queries</h1>
@@ -149,11 +146,11 @@
                 <!--scripted-->
 
                 <section>
-                    <h1>TO THE CODE!</h1>
+                    <h2>Code Samples</h2>
                 </section>
 
                 <section>
-                    <h1>TO THE SHELL!</h1>
+                    <img width="40%" src="images/GrandTheftMongoD.jpg"/>
                 </section>
 
                 <section>
@@ -173,7 +170,7 @@
                 </section>
                 <section>
                     <h1>Mongo
-                        <br>for JPA Developers</h1>
+                        <br>for Java Developers</h1>
 
                     <h3>Justin Lee</h3>
                     <h4>Member of Technical Staff<br>@ MongoDB.com</h4>
