--- a/presentation/index.html
+++ b/presentation/index.html
@@ -5,11 +5,11 @@
 
         <meta name="author" content="Justin lee">
 
-        <link rel="stylesheet" href="css/reveal.css">
-        <link rel="stylesheet" href="css/theme/moon.css" id="theme">
+        <link rel="stylesheet" href="reveal.js-2.6.2/css/reveal.css">
+        <link rel="stylesheet" href="reveal.js-2.6.2/css/theme/moon.css" id="theme">
 
         <!-- For syntax highlighting -->
-        <link rel="stylesheet" href="lib/css/zenburn.css">
+        <link rel="stylesheet" href="reveal.js-2.6.2/lib/css/zenburn.css">
 
         <!-- If the query includes 'print-pdf', use the PDF print sheet -->
         <script>
@@ -22,6 +22,7 @@
                 list-style-image: none;
             }
         </style>
+        <link rel="stylesheet" href="css/presentation.css">
     </head>
     <body>
         <div class="reveal">
@@ -99,8 +100,7 @@
                 <section>
                     <h4>What does a document look like?</h4>
                     db.users.find().pretty()
-                    <pre>
-                        <code>
+                    <pre><code class="json" data-trim>
 {
 "_id" : ObjectId("50fdb55a18c650918ee414be"),
 "className" : "com.antwerkz.mongo.model.User",
@@ -116,8 +116,7 @@
     }
 ]
 }
-                        </code>
-                    </pre>
+                        </code></pre>
                 </section>
                 <section>
                     <h2>Replication and HA</h2>
@@ -129,10 +128,65 @@
                 </section>
 
                 <section>
-                    <h1>Queries</h1>
+                    <h2>Queries</h2>
                     <ul>
-                        <li class="fragment roll-in">db.product_orders.find({ fulfilled : true }).limit(2).pretty()
-                        <li class="fragment roll-in">db.product_orders.find({ fulfilled : true, size : 3 }).limit(2).pretty()
+                        <li class="fragment roll-in">db.product_orders.find({ fulfilled : true }).limit(2)
+                        <li class="fragment roll-in">Java Driver
+                            <pre><code class="java" data-trim>
+DBCursor cursor = db.getCollection("product_orders")
+        .find(new BasicDBObject("filled", true))
+        .limit(2);
+while (cursor.hasNext()) {
+    orders.add(new ProductOrder(cursor.next()));
+}
+                            </code></pre>
+
+                        <li class="fragment roll-in roll-out">Jongo code
+                            <pre><code class="java" data-trim>
+jongo.getCollection("product_orders")
+    .find("{fulfilled : true}")
+    .limit(2)
+    .as(ProductOrder.class)
+                            </code></pre>
+                        <li class="fragment roll-in roll-out">Morphia code
+                            <pre><code class="java" data-trim>
+ds.createQuery(ProductOrder.class)
+    .field("fulfilled").equal(true)
+    .limit(2)
+    .asList()
+                            </code></pre>
+                    </ul>
+                </section>
+
+                <section>
+                    <h2>Queries</h2>
+                    <ul>
+                        <li class="fragment roll-in">db.product_orders.find({ fulfilled : true, total : { $gte : 5000.0 } }).sort({total : 1})
+                        <li class="fragment roll-in">Java Driver
+                            <pre><code class="java" data-trim>
+BasicDBObject query = new BasicDBObject("fulfilled", true)
+    .append("total", new BasicDBObject("$gte", 5000.0));
+DBCursor cursor = db.getCollection(PRODUCT_ORDERS).find(query)
+    .sort(new BasicDBObject("total", 1));
+while (cursor.hasNext()) {
+    orders.add(new ProductOrder(cursor.next()));
+}
+                            </code></pre>
+
+                        <li class="fragment roll-in roll-out">Jongo code
+                            <pre><code class="java" data-trim>
+jongo.getCollection(PRODUCT_ORDERS).find(
+    "{ fulfilled : true, total : { $gte : # } }", 5000.0)
+    .sort("{total : 1}").as(ProductOrder.class)
+                            </code></pre>
+                        <li class="fragment roll-in roll-out">Morphia code
+                            <pre><code class="java" data-trim>
+ds.createQuery(ProductOrder.class)
+    .field("fulfilled").equal(true)
+    .filter("total >=", total)
+//  .field("total").greaterThanOrEq(total)   &lt;-- can be done either way
+    .order("total").asList()
+                            </code></pre>
                         <li class="fragment roll-in">db.product_orders.find({ "products.name" : { $in : [ "Quadtech", "Biolux" ] } }).limit(2).pretty()
                         <li class="fragment roll-in">db.product_orders.find({ "products.name" : "Quadtech" }).limit(2).pretty()
                         <li class="fragment roll-in">db.product_orders.find({ $or : [ { size : 3 }, {fulfilled : false } ] }).limit(2).pretty()
@@ -162,12 +216,6 @@
                         <li><a href="http://www.mongodb.org/">http://www.mongodb.org/</a> Mongo Homepage</li>
                         <li><a href="https://github.com/mongodb/morphia">https://github.com/mongodb/morphia</a> Homepage</li>
                         <li><a href="http://jongo.org">http://jongo.org</a> Jongo</li>
-                        <li>Disclaimer: My Stuff</li>
-                        <ul>
-                            <li>
-                                <a href="https://github.com/evanchooly/critter">https://github.com/evanchooly/critter</a> critter
-                            </li>
-                        </ul>
                     </ul>
                 </section>
                 <section>
@@ -182,8 +230,8 @@
             </div>
         </div>
 
-        <script src="lib/js/head.min.js"></script>
-        <script src="js/reveal.min.js"></script>
+        <script src="reveal.js-2.6.2/lib/js/head.min.js"></script>
+        <script src="reveal.js-2.6.2/js/reveal.min.js"></script>
 
         <script>
 
@@ -195,28 +243,15 @@
                 history: true,
                 center: true,
                 theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
-                transition: Reveal.getQueryHash().transition || 'default', // default/cube/page/concave/zoom/linear/fade/none
+                transition: Reveal.getQueryHash().transition || 'none', // default/cube/page/concave/zoom/linear/fade/none
                 // Optional libraries used to extend on reveal.js
                 dependencies: [
-                    { src: 'lib/js/classList.js', condition: function () {
-                        return !document.body.classList;
-                    } },
-                    { src: 'plugin/markdown/showdown.js', condition: function () {
-                        return !!document.querySelector('[data-markdown]');
-                    } },
-                    { src: 'plugin/markdown/markdown.js', condition: function () {
-                        return !!document.querySelector('[data-markdown]');
-                    } },
-                    { src: 'plugin/highlight/highlight.js', async: true, callback: function () {
-                        hljs.initHighlightingOnLoad();
-                    } },
-                    { src: 'plugin/zoom-js/zoom.js', async: true, condition: function () {
-                        return !!document.body.classList;
-                    } },
-                    { src: 'plugin/notes/notes.js', async: true, condition: function () {
-                        return !!document.body.classList;
-                    } }
-                    // { src: 'plugin/remotes/remotes.js', async: true, condition: function() { return !!document.body.classList; } }
+                    { src: 'reveal.js-2.6.2/lib/js/classList.js', condition: function() { return !document.body.classList; } },
+                    { src: 'reveal.js-2.6.2/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+                    { src: 'reveal.js-2.6.2/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+                    { src: 'reveal.js-2.6.2/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+                    { src: 'reveal.js-2.6.2/plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
+                    { src: 'reveal.js-2.6.2/plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
                 ]
             });
 
